[package]
name = "koto"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.9", features = ["json"] }
dotenv = "0.15.0"
serde_json = "1.0.78"
serde = { version = "1.0.78", features = ["derive"] }
base64 = "0.13.0"
tokio = {version = "1.14.0", features = ["full"] }
clap = {version = "3.0.10", features=["derive"]} 
rusqlite = "0.26.3"
serde_with = "1.11.0"
tag_edit = {git = "https://github.com/EruEri/tag_edit", tag = "v0.2.1"}